--- a/static/css/tab1.css
+++ b/static/css/tab1.css
@@ -23,7 +23,6 @@
     visibility: visible !important;
     margin: 0 !important;
     table-layout: auto;
-    min-height: 200px;
     will-change: opacity;
 }
 
@@ -59,6 +58,12 @@ tr.common-name-row td table.common-table td {
     -ms-overflow-style: auto;
 }
 
+.item-level-wrapper.collapsed {
+    min-height: 0;
+    padding: 0;
+    margin: 0;
+}
+
 .item-level {
     width: 100%;
     min-width: 1200px;
@@ -71,7 +76,6 @@ tr.common-name-row td table.common-table td {
     border-collapse: collapse;
     display: table !important;
     visibility: visible !important;
-    min-height: 200px;
     will-change: opacity;
 }
 
@@ -273,5 +277,5 @@ tr.common-name-row td table.common-table td {
     padding-top: 0; /* Override base.css padding-top to reduce gap */
 }
 .category-table {
-    margin-top: -20px; /* Pull table up to close the gap */
+    margin-top: -36px; /* Adjust to fully close the gap with filter mt-4 (16px) */
 }
