--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="{{ url_for('home.home_view') }}">RFID DASHBOARD</a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">RFID DASHBOARD</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('home.home_view') }}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('tab1.tab1_view') }}">Rental Inventory</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('tab2.tab2_view') }}">Open Contracts</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('tab3.tab3_view') }}">Service</a></li>
